// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render the component with customMessages 1`] = `
<I18nProvider
  locale="en-US"
  messages={
    Object {
      "App.test": "App test",
    }
  }
>
  customMessages
</I18nProvider>
`;

exports[`should render the component with merged attributes 1`] = `
<I18nProvider
  className="TestClass"
  data-mock="data"
  id="TestId"
  locale="en-US"
  messages={Object {}}
>
  String
</I18nProvider>
`;

exports[`should support rendering a string as children 1`] = `
<I18nProvider
  locale="en-US"
  messages={Object {}}
>
  String
</I18nProvider>
`;

exports[`should support rendering a string as the translationsLoadingPlaceholder prop 1`] = `
<div>
  String
</div>
`;

exports[`should support rendering a string without translation 1`] = `
<div>
  String
</div>
`;

exports[`should support rendering an array of elements as a children 1`] = `
<I18nProvider
  locale="en-US"
  messages={Object {}}
>
  <h1>
    Heading
  </h1>
  <p>
    Element 1
  </p>
  <p>
    Element 2
  </p>
</I18nProvider>
`;

exports[`should support rendering an element as children 1`] = `
<I18nProvider
  locale="en-US"
  messages={Object {}}
>
  <p>
    Element
  </p>
</I18nProvider>
`;

exports[`should support rendering an element as the translationsLoadingPlaceholder prop 1`] = `
<div>
  <p>
    Element
  </p>
</div>
`;
